feat(web): add lemon signal accents + polish room actions

--- a/apps/web/app/i18n/en.json
+++ b/apps/web/app/i18n/en.json
@@ -27,7 +27,7 @@
   "home.ttl": "TTL (optional)",
   "home.ttl.hint": "Example: 7d, 24h, 30m",
   "home.generate.link": "Generate link",
-  "home.generate.petal": "Generate petal",
+  "home.generate.petal": "SEAL AND TRANSMIT",
   "home.generating": "Generating...",
   "home.hint.petal": "🌸 burns after the first read",
   "home.hint.link": "🔗 goes to the link",
