--- a/apps/web/app/i18n/es.json
+++ b/apps/web/app/i18n/es.json
@@ -27,7 +27,7 @@
   "home.ttl": "TTL (opcional)",
   "home.ttl.hint": "Ejemplo: 7d, 24h, 30m",
   "home.generate.link": "Generar enlace",
-  "home.generate.petal": "Generar pétalo",
+  "home.generate.petal": "SELLA Y TRANSMITE",
   "home.generating": "Generando...",
   "home.hint.petal": "🌸 se quema tras la primera lectura",
   "home.hint.link": "🔗 va al enlace",
