--- a/apps/web/app/i18n/ro.json
+++ b/apps/web/app/i18n/ro.json
@@ -27,7 +27,7 @@
   "home.ttl": "TTL (opțional)",
   "home.ttl.hint": "Exemplu: 7d, 24h, 30m",
   "home.generate.link": "Generează link",
-  "home.generate.petal": "Generează petală",
+  "home.generate.petal": "SIGILEAZĂ ȘI TRANSMITE",
   "home.generating": "Generez...",
   "home.hint.petal": "🌸 se arde după prima citire",
   "home.hint.link": "🔗 va duce către link",
