chore(web): update share text for radio copy

--- a/apps/web/app/i18n/en.json
+++ b/apps/web/app/i18n/en.json
@@ -36,6 +36,7 @@
   "home.share": "Share",
   "home.sharing": "Sharing...",
   "home.previewing": "Preparing preview...",
+  "home.share.text": "Field unit link. Open, read, burn.",
   "home.result.label": "Generated link:",
   "home.result.cli": "CLI (ritual mode):",
 
