--- a/apps/web/app/i18n/es.json
+++ b/apps/web/app/i18n/es.json
@@ -36,6 +36,7 @@
   "home.share": "Compartir",
   "home.sharing": "Compartiendo...",
   "home.previewing": "Preparando vista previa...",
+  "home.share.text": "Enlace de unidad. Abre, lee, quema.",
   "home.result.label": "Enlace generado:",
   "home.result.cli": "CLI (modo ritual):",
 
