--- a/apps/web/app/i18n/ro.json
+++ b/apps/web/app/i18n/ro.json
@@ -36,6 +36,7 @@
   "home.share": "Trimite",
   "home.sharing": "Trimit...",
   "home.previewing": "Pregătesc preview...",
+  "home.share.text": "Link de frecvență. Deschizi, citești, arzi.",
   "home.result.label": "Link generat:",
   "home.result.cli": "CLI (ritual mode):",
 
