chore(web): switch share labels to radio tuning

--- a/apps/web/app/i18n/ro.json
+++ b/apps/web/app/i18n/ro.json
@@ -33,9 +33,9 @@
   "home.hint.link": "🔗 va duce către link",
   "home.copy": "Copiază",
   "home.copied": "✓ Copiat",
-  "home.share": "Trimite",
-  "home.sharing": "Trimit...",
-  "home.previewing": "Pregătesc preview...",
+  "home.share": "TRANSMITE",
+  "home.sharing": "TRANSMIT...",
+  "home.previewing": "ACORDEZ PREVIEW...",
   "home.share.text": "Link de frecvență. Deschizi, citești, arzi.",
   "home.result.label": "Link generat:",
   "home.result.cli": "CLI (ritual mode):",
