--- a/apps/web/app/i18n/en.json
+++ b/apps/web/app/i18n/en.json
@@ -33,9 +33,9 @@
   "home.hint.link": "🔗 goes to the link",
   "home.copy": "Copy",
   "home.copied": "✓ Copied",
-  "home.share": "Share",
-  "home.sharing": "Sharing...",
-  "home.previewing": "Preparing preview...",
+  "home.share": "TRANSMIT",
+  "home.sharing": "TRANSMITTING...",
+  "home.previewing": "TUNING PREVIEW...",
   "home.share.text": "Field unit link. Open, read, burn.",
   "home.result.label": "Generated link:",
   "home.result.cli": "CLI (ritual mode):",
