feat(burn): add signal-lost screen + burn hook

--- a/apps/web/app/i18n/en.json
+++ b/apps/web/app/i18n/en.json
@@ -51,6 +51,9 @@
   "room.burn.cta": "Burn",
   "room.reply.cta": "Reply",
   "room.reply.hint": "Replying will burn the original message.",
+  "room.signal_lost.title": "SIGNAL LOST",
+  "room.signal_lost.subtitle": "FREQUENCY CLEARED • NO TRACE",
+  "room.signal_lost.code": "ERR_CONNECTION_RESET_BY_USER",
   "room.seal.title": "Incoming transmission",
   "room.seal.subtitle": "Secure package • one-time read",
   "room.seal.cta": "Break seal",
