--- a/apps/web/app/i18n/ro.json
+++ b/apps/web/app/i18n/ro.json
@@ -51,6 +51,9 @@
   "room.burn.cta": "Arde",
   "room.reply.cta": "Răspunde",
   "room.reply.hint": "Răspunsul va arde mesajul original.",
+  "room.signal_lost.title": "SEMNAL PIERDUT",
+  "room.signal_lost.subtitle": "FRECVENTA STEARSA • FARA URME",
+  "room.signal_lost.code": "ERR_CONNECTION_RESET_BY_USER",
   "room.seal.title": "Transmisie primită",
   "room.seal.subtitle": "Pachet securizat • o singură citire",
   "room.seal.cta": "Desigilează",
