--- a/apps/web/app/i18n/es.json
+++ b/apps/web/app/i18n/es.json
@@ -51,6 +51,9 @@
   "room.burn.cta": "Quemar",
   "room.reply.cta": "Responder",
   "room.reply.hint": "Responder quemará el mensaje original.",
+  "room.signal_lost.title": "SEÑAL PERDIDA",
+  "room.signal_lost.subtitle": "FRECUENCIA BORRADA • SIN RASTRO",
+  "room.signal_lost.code": "ERR_CONNECTION_RESET_BY_USER",
   "room.seal.title": "Transmisión entrante",
   "room.seal.subtitle": "Paquete seguro • una sola lectura",
   "room.seal.cta": "Romper sello",
